--- a/style.css
+++ b/style.css
@@ -31,3 +31,14 @@ botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal)
 }
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900
+
+.inter-<uniquifier> {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+}
