--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
-{
-    margin;0;
+* {
+    margin:0;
     padding:0;
-}
-: 
-
 ROOT {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
@@ -21,7 +18,7 @@ body {
     margin:0;
     padding:0;
 
-. principal{
+    . principal{
         background-image: url("img/Background.png");
         background-repeat: no-repeat;
         background-size: contain;
@@ -35,7 +32,12 @@ body {
     display: grid;
     grid-template-columns: 50% 50%;
 
-}.container__botao {
+}.container__botao {-principal);
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
+}
+botao_secundario {
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
@@ -44,18 +46,86 @@ body {
     text-decoration: none;
     margin-bottom: 1em;
 }
-botao_secundario {
+botao_secundario {nagen
     background-color: transparent;
     border: 2px solid var(--branco-principal)
 }
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-
-.inter-<uniquifier> {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "slnt" 0;
+.container-aviso{
+    font-size: 12px;
+    color:var(--cinza-secundario);
 }
+.container-imagem {
+    margin: 1em 0 2em 0;
+}
+.container-caixa {
+    margin: 0 6em;
+}
+.secundario-imagem{
+    width:80%;
+}
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+.descricao-titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom:0 1em;
+}
+.descricao-texto{
+    color:var (--cinza-secundario);
+}
+.secundario-botao{
+    display:inline-block;
+    margin-top:1em;
+}
+.container-descricao{
+    padding: 2em;
+}
+.dispositivos-lista{
+    display:flex;
+    justify-content: center;
+    list-style-type:none;
+    margin:5em 0;
+}
+.dispositivos {
+    text-align:center;
+}
+.dispositivos-titulo{
+    font-size: 48px;
+    color:var(--branco-principal);
+}
+.lista-item{
+    font-size:32px;
+    color: var(--branco-principal);
+}
+.rodape-lista{
+    display: flex;
+    justify-content:center;
+    list-style-type:none;
+    margin-top: 1em;
+}
+.lista-link a{
+    text-decoration:none;
+    color:var(--branco-principal);
+    margin-left: 1em;
+}
+.rodape-texto{
+    margin: 1em 0;
+    color:var(--cinza-secundario);
+    font-size:14px;
+}
+.rodape{
+    text-align:center;
+    margin: 5em 3em;
+}
+.lista-link a:hover {
+    color:var(--botao-azul);
+}
+lista-link a:active{
+    color: purple;
+}
+container-botao:hover{
+    background-color:var(--botao-azul-efeito);
+    color:var(--cor-de-fundo);
