--- a/style.css
+++ b/style.css
@@ -6,38 +6,29 @@ ROOT {
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --fonte-principal: ´inter`;
+    --botao-azul-efeito: #3c92fa;
 }
-
 body {
     background-color:var(--cor-de-fundo);
     color: var(--preto-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight:400;
-* {
-    margin:0;
-    padding:0;
-
+}
     . principal{
         background-image: url("img/Background.png");
         background-repeat: no-repeat;
         background-size: contain;
         align-items: center;
         text-align: center;
-    }
-
 }
 .container {
     height: 100vh;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 70%;
 
-}.container__botao {-principal);
-    display: block;
-    text-decoration: none;
-    margin-bottom: 1em;
-}
-botao_secundario {
+}.container__botao{
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
@@ -46,7 +37,7 @@ botao_secundario {
     text-decoration: none;
     margin-bottom: 1em;
 }
-botao_secundario {nagen
+botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal)
 }
