--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ ROOT {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
-    --cor-de-fundo: #00030C;
+    --cor-de-fundo: #0c0d0e;
     --fonte-principal: ´inter`;
     --botao-azul-efeito: #3c92fa;
 }
