--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin:0;
     padding:0;
-ROOT {
+:root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
