--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #0c0d0e;
-    --fonte-principal: ´inter`;
+    --fonte-principal: 'inter';
     --botao-azul-efeito: #3c92fa;
 }
 body {
